# sdlGUI

./: .gitignore  CMakeLists.txt  README.md
include/: Batch.h  Font.h  Gui.h  Math.h
src/: Batch.cpp  File.cpp  File.h  Font.cpp  Gui.cpp  Gui.h  Math.h  Texture.cpp  Texture.h  Utils.h  main.cpp  pch.h
