cmake_minimum_required(VERSION 3.16)
project(sdlGUI)
cmake_policy(SET CMP0072 NEW)


set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ")


if (WIN32)
    set(LIBS_DIR "E:/windows/libs")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}   -D_CRT_SECURE_NO_WARNINGS")
    if (MSVC)
        if(CMAKE_BUILD_TYPE MATCHES Debug)
            add_compile_options(/RTC1 /Od /Zi)
            set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /fsanitize=address")
        endif()     
    endif()

endif() 


set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)

add_compile_options(
    -Wall 
)


file(GLOB SOURCES "src/*.cpp")
add_executable(sdlGUI  ${SOURCES})
 
target_include_directories(sdlGUI PUBLIC "${LIBS_DIR}/include" include  src)



if(CMAKE_BUILD_TYPE MATCHES Debug)

    if (UNIX)
        target_compile_options(sdlGUI PRIVATE -fsanitize=address -fsanitize=undefined -fsanitize=leak   -fno-omit-frame-pointer -g  -D_DEBUG )
        target_link_options(sdlGUI PRIVATE -fsanitize=address -fsanitize=undefined -fsanitize=leak    -D_DEBUG) 
    endif()


elseif(CMAKE_BUILD_TYPE MATCHES Release)
    target_compile_options(sdlGUI PRIVATE -O3   -DNDEBUG )
    target_link_options(sdlGUI PRIVATE -O3   -DNDEBUG )
endif()

find_package(OpenGL REQUIRED)


if (WIN32)
    target_link_libraries(sdlGUI  m  "${LIBS_DIR}/lib/x64/SDL2main.lib" "${LIBS_DIR}/lib/x64/SDL2.lib"  Winmm.lib opengl32.lib)
endif()

if (UNIX)
    target_link_libraries(sdlGUI
    PRIVATE
        m
        SDL2
        OpenGL::GL
)
endif()
